tell and watch path update

--- a/app/templates/header.component.html
+++ b/app/templates/header.component.html
@@ -4,7 +4,7 @@
             <div class="container">
                 <div class="row">
                 <div class="logo-container col s3 m2">
-                    <img src="../../assets/images/tawheaderlogo.png" class="responsive-img" alt="">
+                    <img src="/AngularAttackProject/assets/images/tawheaderlogo.png" class="responsive-img" alt="">
                 </div>
                     <div class="col s7 m9 search-section">
                         <div class="search-top">Search hear</div>
